--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://root:root@travelplanner.vwtpz3y.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=TravelPlanner
+spring.profiles.active=prod
+
+#spring.data.mongodb.uri=mongodb+srv://root:root@travelplanner.vwtpz3y.mongodb.net/?retryWrites=true&w=majority
+#spring.data.mongodb.database=TravelPlanner
