--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 #spring.data.mongodb.uri=mongodb+srv://root:root@travelplanner.vwtpz3y.mongodb.net/?retryWrites=true&w=majority
 #spring.data.mongodb.database=TravelPlanner
