made email unique and added exception

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.profiles.active=dev
 
 #spring.data.mongodb.uri=mongodb+srv://root:root@travelplanner.vwtpz3y.mongodb.net/?retryWrites=true&w=majority
 #spring.data.mongodb.database=TravelPlanner
+spring.data.mongodb.auto-index-creation=true
